Revision history for {{$dist->name}}

{{$NEXT}}

0.28      2014-04-07 11:47:43 America/New_York
  - [@ACPS] mb_ prefixed values are passed into [ModuleBuild], if present

0.27      2013-07-06 18:07:02 America/New_York
  - commit README.pod after release if it is there

0.26      2013-06-19 17:09:39 America/New_York
  - don't generate debug packages when building rpms

0.25      2013-06-14 17:25:03 America/New_York
  - don't prune .travis.yml from dist

0.24      2013-06-12 09:47:26 America/New_York
  - modified default dist.ini (comments only)

0.23      2013-06-11 07:31:47 America/New_York
  - use [Author::Plicease::UploadToCPAN]

0.22      2013-06-11 07:30:03 America/New_York
  - add .travis.yml to minted dist

0.21      2013-05-25 23:22:24 America/New_York
  - Allow README.pod to be dirty for release

0.20      2013-05-17 20:19:57 America/New_York
  - Allow main repo to be set via environment
  - documentation tweaks

0.18      2013-05-07 13:20:20 EST5EDT
  - remove [ExtraTests] which we don't use

0.17      2013-05-02 13:01:11 EST5EDT
  - require [MinimumPerl]

0.16      2013-04-23 16:35:01 America/New_York
  - created [@ACPS::MakeMaker]
  - fixed use test

0.15      2013-03-01 13:58:47 America/New_York
  - automatically update Changes after release

0.14      2013-03-01 13:38:40 America/New_York
  - move commands into its own dist

0.13      2013-03-01 13:26:11 America/New_York
  - import File::ShareDir( dist_dir) where we need it

0.11      2013-03-01 11:06:47 America/New_York
  - rm [MakeMaker] from [@ACPS]
  - rm [ShareDir] from [@ACPS]
  - mingint profiles for clustericiousa app, client and mbd_app

0.10      2013-02-22 14:51:32 America/New_York
  - commit to release instead of release/master
  - removed [ACPS::JavaScriptVersion]
  - default profile to include [RemovePrereqs], [MinimumPerl] and commented 
    out [Prereqs] and [ACPS::RPM] by default

0.09      2012-12-11 12:20:22 America/New_York
  - added [ACPS::JavaScriptVersion]
