@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - miniting profile Clustericious is now optional, as it has been removed
+    from CPAN
 
 0.28      2014-04-07 11:47:43 America/New_York
   - [@ACPS] mb_ prefixed values are passed into [ModuleBuild], if present
